@@ -719,7 +719,7 @@ void R_LoadSkys (void)
 	for (i = 0; i < 6; i++)
 	{
 		q_snprintf (name, sizeof(name), "gfx/env/bkgtst%s.tga", suf[i]);
-		FS_OpenFile (name, &f, NULL, false);
+		FS_OpenFile (name, &f, NULL);
 		if (!f)
 		{
 			Con_Printf ("Couldn't load %s\n", name);
