@@ -190,7 +190,7 @@ void R_ReadPointFile_f (void)
 	color = (byte)Cvar_VariableValue("leak_color");
 	sprintf (name,"maps/%s.pts", sv.name);
 
-	FS_OpenFile (name, &f, NULL, false);
+	FS_OpenFile (name, &f, NULL);
 	if (!f)
 	{
 		Con_Printf ("couldn't open %s\n", name);
